--- a/app/src/main/res/layout/activity_recette.xml
+++ b/app/src/main/res/layout/activity_recette.xml
@@ -35,10 +35,12 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/lvrecette"
-        android:layout_alignParentStart="true"
-        android:layout_below="@+id/toolbar">
+        android:layout_marginTop="50dp"
+        >
 
     </ListView>
+
+
 
     <ImageButton
         android:id="@+id/btnback"
@@ -50,6 +52,7 @@
         android:layout_marginTop="15dp"
         android:background="#f50206"
         app:srcCompat="?attr/homeAsUpIndicator" />
+
 
 
 </RelativeLayout>
