--- a/app/src/main/res/layout/layoutview_menu.xml
+++ b/app/src/main/res/layout/layoutview_menu.xml
@@ -12,7 +12,7 @@
         android:layout_width="match_parent"
         android:fitsSystemWindows="true"
         android:minHeight="?attr/actionBarSize"
-        app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
+        app:theme="@style/AppTheme.AppBarOverlay"
         android:background="#f50206"
         android:layout_alignParentTop="true"
         android:layout_alignParentStart="true"/>
@@ -25,90 +25,90 @@
     android:id="@+id/imageView2"
     android:layout_marginTop="50dp"
     />
-
-<RelativeLayout
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:background="@color/white"
-    android:layout_below="@+id/imageView2"
-    android:layout_alignParentStart="true"
-    android:layout_marginTop="12dp">
-
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Bienvenue sur l'Application Kizin Lakay,pour vous servir!!!!! Apprenez à cuisiner les meilleures recettes Haitiennes..."
         android:textColor="@color/red"
-        android:textStyle="italic"
-        android:textSize="16dp"
-        android:id="@+id/textView2" />
+        android:textStyle="bold"
+        android:textSize="18dp"
+        android:id="@+id/textView2"
+        android:textAlignment="center"
+        android:layout_below="@+id/imageView2"
+        />
+
+
+    <LinearLayout
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:background="@color/white"
+    android:layout_marginTop="25dp"
+        android:orientation="horizontal"
+        android:layout_below="@+id/textView2"
+        android:layout_centerHorizontal="true">
+
 
     <Button
         android:id="@+id/btnmeat"
-        android:layout_width="100dp"
-        android:layout_height="80dp"
+        android:layout_width="60dp"
+        android:layout_height="60dp"
         android:background="@drawable/icon_meat"
         android:textColor="@color/red"
         android:alpha="0.8"
         android:textStyle="bold"
         android:textSize="10sp"
-        android:layout_below="@+id/btnsoup"
-        android:layout_alignParentEnd="true" />
+        android:layout_weight="0.25"
+        />
 
     <Button
         android:id="@+id/btndessert"
-        android:layout_width="100dp"
-        android:layout_height="80dp"
+        android:layout_width="60dp"
+        android:layout_height="60dp"
         android:background="@drawable/pastry"
         android:textColor="@color/red"
         android:alpha="0.8"
         android:textStyle="bold"
         android:textSize="10sp"
-        android:layout_below="@+id/btnAperitif"
-        android:layout_alignStart="@+id/btnsoup" />
+         />
 
     <Button
         android:id="@+id/btnsoup"
-        android:layout_width="100dp"
-        android:layout_height="80dp"
+        android:layout_width="60dp"
+        android:layout_height="60dp"
         android:background="@drawable/soupicone"
         android:textColor="@color/red"
         android:alpha="0.8"
         android:textStyle="bold"
         android:textSize="10sp"
-        android:layout_below="@+id/textView2"
-        android:layout_alignParentStart="true"
-        android:layout_marginStart="10dp" />
+         />
 
 
     <Button
         android:id="@+id/btndrink"
-        android:layout_width="100dp"
-        android:layout_height="80dp"
+        android:layout_width="60dp"
+        android:layout_height="60dp"
         android:background="@drawable/drink1"
         android:textColor="@color/red"
         android:alpha="0.8"
         android:textStyle="bold"
         android:textSize="10sp"
-        android:layout_below="@+id/textView2"
-        android:layout_alignParentEnd="true" />
+       />
 
     <Button
         android:id="@+id/btnAperitif"
-        android:layout_width="100dp"
-        android:layout_height="80dp"
+        android:layout_width="60dp"
+        android:layout_height="60dp"
         android:alpha="0.8"
         android:background="@drawable/appetizer"
         android:textColor="@color/red"
         android:textSize="10sp"
         android:textStyle="bold"
-        android:layout_below="@+id/textView2"
-        android:layout_centerHorizontal="true" />
+      />
 
 
 
 
 
-</RelativeLayout>
+</LinearLayout>
 
 </RelativeLayout>
