--- a/app/src/main/res/layout/recette_layout.xml
+++ b/app/src/main/res/layout/recette_layout.xml
@@ -1,7 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
-    android:orientation="vertical" android:layout_width="match_parent"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:orientation="vertical"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_marginTop="20dp"
     android:padding="2dp">
@@ -34,52 +36,60 @@
             android:layout_height="wrap_content"
             android:orientation="horizontal">
 
-
-
-
             <com.makeramen.roundedimageview.RoundedImageView
-                xmlns:app="http://schemas.android.com/apk/res-auto"
                 android:id="@+id/imrecette"
-                android:layout_width="100dp"
-                android:layout_height="100dp"
-                android:layout_alignParentLeft="true"
+                android:layout_width="200dp"
+                android:layout_height="200dp"
+                android:layout_alignParentBottom="true"
                 android:layout_marginBottom="5dp"
                 android:elevation="4dp"
-                app:riv_border_color="#ffffff"
-                app:riv_border_width="2dp"
-                app:riv_corner_radius="5dip"
-                app:riv_mutate_background="true"
-                app:riv_oval="false"
-                app:riv_tile_mode="clamp" />
+                card_view:riv_border_color="#ffffff"
+                card_view:riv_border_width="2dp"
+                card_view:riv_corner_radius="5dip"
+                card_view:riv_mutate_background="true"
+                card_view:riv_oval="false"
+                card_view:riv_tile_mode="clamp"
+                tools:src="@mipmap/ic_launcher" />
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
+
+                <TextView
+                    android:id="@+id/txtdescription"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_alignParentRight="true"
+                    android:layout_marginTop="40dp"
+                    android:background="@color/white"
+                    android:maxLines="4"
+                    android:text="Preparation"
+                    android:textSize="15dp" />
 
 
+            </LinearLayout>
+
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
 
             <TextView
                 android:id="@+id/txtrecette"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_weight="1"
+                android:layout_alignParentTop="true"
                 android:background="@color/white"
                 android:ellipsize="end"
                 android:maxLines="4"
-
-                android:textSize="20dp"/>
-
-
-
-            <TextView
-                android:id="@+id/txtdescription"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:background="@color/white"
-                android:ellipsize="end"
-                android:maxLines="4"
-
-                android:textSize="15dp"/>
+                android:text="Recette"
+                android:textColor="@color/cardview_dark_background"
+                android:textSize="30dp" />
 
         </LinearLayout>
-
 
     </android.support.v7.widget.CardView>
 </LinearLayout>
