--- a/app/src/main/res/layout/activity_details.xml
+++ b/app/src/main/res/layout/activity_details.xml
@@ -2,6 +2,7 @@
 
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:card_view="http://schemas.android.com/apk/res-auto"
     android:id="@+id/movie_details"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -11,9 +12,20 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.example.thodlydugue.kizinlakayapp.DetailsActivity">
 
+    <ImageView
+        android:id="@+id/ivrecette"
+        android:layout_width="match_parent"
+        android:layout_height="200dp"
+        android:layout_gravity="center_horizontal"
+        android:layout_marginTop="10dp"
+        tools:src="@mipmap/ic_launcher" />
+
     <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:layout_marginTop="214dp"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentStart="true">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -40,6 +52,19 @@
                     />
 
 
+
+
+             <!--   <RatingBar
+                    android:id="@+id/rating_bar"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_horizontal"
+                    android:layout_marginTop="10dp"
+                    android:isIndicator="true"
+                    android:numStars="10" />-->
+
+
+
             </LinearLayout>
 
 
@@ -58,13 +83,6 @@
 
                 </LinearLayout>
 
-                <ImageView
-                    android:id="@+id/ivrecette"
-                    android:layout_width="match_parent"
-                    android:layout_height="200dp"
-                    android:layout_gravity="center_horizontal"
-                    android:layout_marginTop="10dp"
-                    tools:src="@mipmap/ic_launcher" />
 
                 <TextView
                     android:id="@+id/tvIngredients"
@@ -78,6 +96,14 @@
 
 
                     />
+                <android.support.v7.widget.CardView
+                    android:id="@+id/card_view"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:layout_margin="5dp"
+                    card_view:cardCornerRadius="2dp"
+                    card_view:contentPadding="10dp">
 
                 <TextView
                     android:id="@+id/preparation"
@@ -85,7 +111,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="10dp"
                     tools:text="Preparation" />
-
+</android.support.v7.widget.CardView>
             </LinearLayout>
 
 
@@ -94,6 +120,17 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:orientation="vertical">
+
+
+              <!--  <Button
+                    android:id="@+id/videoplayer"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_marginTop="30dp"
+                    android:background="@color/colorAccent"
+                    android:text="Play Trailer"
+                    android:textColor="@android:color/background_light"
+                    android:textSize="22sp" />-->
 
             </LinearLayout>
 
