--- a/app/src/main/res/layout/layoutview_menu.xml
+++ b/app/src/main/res/layout/layoutview_menu.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    >
+    android:layout_height="match_parent">
     <android.support.v7.widget.Toolbar
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
@@ -13,9 +14,7 @@
         android:fitsSystemWindows="true"
         android:minHeight="?attr/actionBarSize"
         app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
-        android:background="#f50206"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentStart="true"/>
+        android:background="#3f96a1" />
 
 <!--
     <ImageView
@@ -31,12 +30,19 @@
         xmlns:android="http://schemas.android.com/apk/res/android"
         android:id="@+id/pagerrecette"
         android:layout_width="match_parent"
-        android:layout_height="300dp"
-        android:layout_below="@+id/toolbar1"
-        >
+        android:layout_height="300dp">
     </android.support.v4.view.ViewPager>
 
-
+    <com.viewpagerindicator.CirclePageIndicator
+        android:id="@+id/indicator"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:gravity="bottom"
+        android:padding="10dip"
+        app:centered="true"
+        app:fillColor="#ff0099"
+        app:pageColor="#FF0000"
+        app:snap="false" />
 
     <TextView
         android:id="@+id/textView2"
@@ -45,81 +51,94 @@
         android:gravity="center_horizontal"
         android:text="Apprenez à cuisiner les meilleures recettes Haitiennes..."
         android:textColor="@color/red"
-        android:textSize="20dp"
+        android:textSize="15sp"
         android:textStyle="italic"
-        android:layout_below="@+id/pagerrecette"
-        android:layout_alignParentStart="true" />
+        tools:ignore="HardcodedText" />
 
 
 <RelativeLayout
-    android:layout_width="300dp"
-    android:layout_height="200dp"
-    android:layout_alignParentBottom="true"
-    android:layout_alignParentEnd="true"
-    android:layout_alignParentStart="true">
-    <Button
-        android:id="@+id/btnmeat"
-        android:layout_width="100dp"
-        android:layout_height="80dp"
-        android:background="@drawable/chicken"
-        android:textColor="@color/red"
-        android:alpha="0.8"
-        android:textStyle="bold"
-        android:textSize="10sp"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentEnd="true"
-        android:layout_marginEnd="18dp" />
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:id="@+id/Relative1">
 
-    <Button
-        android:id="@+id/btndessert"
-        android:layout_width="90dp"
-        android:layout_height="70dp"
-        android:alpha="0.8"
-        android:background="@drawable/cake"
-        android:textColor="@color/red"
-        android:textSize="10sp"
-        android:textStyle="bold"
-        android:layout_alignParentTop="true"
-        android:layout_toStartOf="@+id/btnAperitif" />
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:orientation="vertical"
+        android:layout_height="wrap_content"
+        android:id="@+id/linear1"
+        android:gravity="end">
+
+        <Button
+            android:id="@+id/btndrink"
+            android:layout_width="100dp"
+            android:layout_height="100dp"
+            android:background="@mipmap/ic_coffee"
+            android:textColor="@color/red"
+            android:alpha="0.8"
+            android:layout_margin="10dp"
+            android:textStyle="bold"
+            android:textSize="10sp"
+            android:paddingRight="5dp"
+            tools:ignore="RtlHardcoded,RtlSymmetry,SmallSp" />
+
+        <Button
+            android:id="@+id/btnmeat"
+            android:layout_width="100dp"
+            android:layout_height="100dp"
+            android:background="@mipmap/ic_chicken"
+            android:textColor="@color/red"
+            android:layout_margin="10dp"
+            android:alpha="0.8"
+            android:textStyle="bold"
+            android:textSize="10sp"
+            tools:ignore="SmallSp" />
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:orientation="vertical"
+        android:layout_height="wrap_content"
+        android:id="@+id/linear2"
+        android:gravity="start">
+
+        <Button
+            android:id="@+id/btndessert"
+            android:layout_width="100dp"
+            android:layout_height="100dp"
+            android:alpha="0.8"
+            android:background="@mipmap/ic_cake"
+            android:textColor="@color/red"
+            android:layout_margin="10dp"
+            android:textSize="12sp"
+            android:textStyle="bold" />
 
     <Button
         android:id="@+id/btnsoup"
         android:layout_width="100dp"
-        android:layout_height="80dp"
-        android:background="@drawable/soup"
+        android:layout_height="100dp"
+        android:background="@mipmap/ic_soup"
         android:textColor="@color/red"
+        android:layout_margin="10dp"
         android:alpha="0.8"
         android:textStyle="bold"
-        android:textSize="10sp"
-        android:layout_marginEnd="14dp"
-        android:layout_alignParentBottom="true"
-        android:layout_toStartOf="@+id/btnAperitif" />
+        android:textSize="12sp" />
+
+    </LinearLayout>
 
 
-    <Button
-        android:id="@+id/btndrink"
-        android:layout_width="100dp"
-        android:layout_height="80dp"
-        android:background="@drawable/coffee"
-        android:textColor="@color/red"
-        android:alpha="0.8"
-        android:textStyle="bold"
-        android:textSize="10sp"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentEnd="true" />
 
     <Button
         android:id="@+id/btnAperitif"
         android:layout_width="100dp"
-        android:layout_height="80dp"
+        android:layout_height="100dp"
         android:alpha="0.8"
-        android:background="@drawable/kebab"
+        android:background="@mipmap/ic_kebab"
         android:textColor="@color/red"
-        android:textSize="10sp"
+        android:textSize="12sp"
         android:textStyle="bold"
         android:layout_centerVertical="true"
         android:layout_centerHorizontal="true" />
 
 
 </RelativeLayout>
-</RelativeLayout>
+</LinearLayout>
