--- a/app/src/main/res/layout/layoutview_menu.xml
+++ b/app/src/main/res/layout/layoutview_menu.xml
@@ -14,7 +14,7 @@
         android:fitsSystemWindows="true"
         android:minHeight="?attr/actionBarSize"
         app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
-        android:background="#3f96a1" />
+        android:background="#FF0000" />
 
 <!--
     <ImageView
@@ -40,7 +40,7 @@
         android:gravity="bottom"
         android:padding="10dip"
         app:centered="true"
-        app:fillColor="#ff0099"
+        app:fillColor="#FF0000"
         app:pageColor="#FF0000"
         app:snap="false" />
 
