--- a/app/src/main/res/layout/layoutview_menu.xml
+++ b/app/src/main/res/layout/layoutview_menu.xml
@@ -30,7 +30,7 @@
         xmlns:android="http://schemas.android.com/apk/res/android"
         android:id="@+id/pagerrecette"
         android:layout_width="match_parent"
-        android:layout_height="300dp">
+        android:layout_height="229dp">
     </android.support.v4.view.ViewPager>
 
     <com.viewpagerindicator.CirclePageIndicator
@@ -70,11 +70,13 @@
 
         <Button
             android:id="@+id/btndrink"
+            android:background="@drawable/circle"
             android:layout_width="100dp"
             android:layout_height="100dp"
-            android:background="@mipmap/ic_coffee"
-            android:textColor="@color/red"
+            android:drawableTop="@mipmap/ic_coffee"
+            android:textColor="#FFFF"
             android:alpha="0.8"
+            android:text="BOISSONS"
             android:layout_margin="10dp"
             android:textStyle="bold"
             android:textSize="10sp"
@@ -85,12 +87,14 @@
             android:id="@+id/btnmeat"
             android:layout_width="100dp"
             android:layout_height="100dp"
-            android:background="@mipmap/ic_chicken"
-            android:textColor="@color/red"
+            android:background="@drawable/circle"
+            android:drawableTop="@mipmap/ic_chicken"
+            android:text="VIANDES"
             android:layout_margin="10dp"
             android:alpha="0.8"
             android:textStyle="bold"
             android:textSize="10sp"
+            android:textColor="#FFFF"
             tools:ignore="SmallSp" />
     </LinearLayout>
 
@@ -105,23 +109,27 @@
             android:id="@+id/btndessert"
             android:layout_width="100dp"
             android:layout_height="100dp"
-            android:alpha="0.8"
-            android:background="@mipmap/ic_cake"
-            android:textColor="@color/red"
             android:layout_margin="10dp"
+            android:alpha="0.8"
+            android:background="@drawable/circle"
+            android:drawableTop="@mipmap/ic_cake1"
+            android:text="DESSERTS"
+            android:textColor="#FFFF"
             android:textSize="12sp"
             android:textStyle="bold" />
 
-    <Button
-        android:id="@+id/btnsoup"
-        android:layout_width="100dp"
-        android:layout_height="100dp"
-        android:background="@mipmap/ic_soup"
-        android:textColor="@color/red"
-        android:layout_margin="10dp"
-        android:alpha="0.8"
-        android:textStyle="bold"
-        android:textSize="12sp" />
+        <Button
+            android:id="@+id/btnsoup"
+            android:layout_width="100dp"
+            android:layout_height="100dp"
+            android:layout_margin="10dp"
+            android:alpha="0.8"
+            android:background="@drawable/circle"
+            android:drawableTop="@mipmap/ic_soup"
+            android:text="SOUPES"
+            android:textColor="#FFFF"
+            android:textSize="12sp"
+            android:textStyle="bold" />
 
     </LinearLayout>
 
@@ -132,8 +140,10 @@
         android:layout_width="100dp"
         android:layout_height="100dp"
         android:alpha="0.8"
-        android:background="@mipmap/ic_kebab"
-        android:textColor="@color/red"
+        android:drawableTop="@mipmap/ic_kebab"
+        android:background="@drawable/circle"
+        android:text="APERITIF"
+        android:textColor="#FFFF"
         android:textSize="12sp"
         android:textStyle="bold"
         android:layout_centerVertical="true"
